header and banner section done

--- a/index.html
+++ b/index.html
@@ -7,10 +7,41 @@
     <link rel="stylesheet" href="styles/architects.css" />
   </head>
   <body>
-    <header>
-      <h1>Hello world</h1>
+    <!-- nav bar -->
+    <header class="display-flex">
+      <h2>G3 Architects</h2>
+      <nav>
+        <ul class="display-flex">
+          <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">contact us</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">login</a></li>
+        </ul>
+      </nav>
     </header>
-    <main></main>
+
+    <main>
+      <!-- banner section -->
+      <section class="banner">
+        <div class="banner-description">
+          <h1>
+            Brand New <br />
+            Group of Architects
+          </h1>
+          <p>
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or hello words which don't look even
+          </p>
+          <div>
+            <button class="primary-btn">Explore More</button>
+          </div>
+        </div>
+        <div class="banner-image">
+          <img src="./images/banner.png" alt="banner image" />
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
