--- a/index.html
+++ b/index.html
@@ -62,6 +62,64 @@
           <button class="primary-btn">Explore More</button>
         </div>
       </section>
+      <!-- features section -->
+      <section class="features">
+        <div class="features-description">
+          <div class="section-title-description">
+            <h2 class="section-title special">
+              Features you will <br />
+              love & enjoy
+            </h2>
+            <p>
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour, or hello words which don't look even
+            </p>
+            <div class="features-cards">
+              <div class="features-card">
+                <h5>Desktop & Mobile Version</h5>
+                <p>
+                  There are many variations of passages of Lorem Ipsum
+                  available, but the majority have suffered alteration in some
+                  form, by injected humour, or randomized...........
+                </p>
+              </div>
+              <div class="features-card">
+                <h5>Drag & Drop Builder</h5>
+                <p>
+                  There are many variations of passages of Lorem Ipsum
+                  available, but the majority have suffered alteration in some
+                  form, by injected humour, or randomized...........
+                </p>
+              </div>
+              <div class="features-card">
+                <h5>Awesome Modern Design</h5>
+                <p>
+                  There are many variations of passages of Lorem Ipsum
+                  available, but the majority have suffered alteration in some
+                  form, by injected humour, or randomized...........
+                </p>
+              </div>
+              <div class="features-card">
+                <h5>Super Easy to Edit</h5>
+                <p>
+                  There are many variations of passages of Lorem Ipsum
+                  available, but the majority have suffered alteration in some
+                  form, by injected humour, or randomized...........
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="features-image">
+          <img src="./images/architect.png" alt="" />
+          <button class="primary-btn experience-badge">
+            <h1>10+Year</h1>
+            <br />
+            Experience
+          </button>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
