sponsors section done

--- a/index.html
+++ b/index.html
@@ -120,6 +120,23 @@
           </button>
         </div>
       </section>
+      <!-- our sponsors -->
+      <section class="our-sponsors">
+        <div class="section-title-description">
+          <h2 class="section-title">Our Sponsors</h2>
+          <p>
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration.
+          </p>
+        </div>
+        <div class="sponsors-images">
+          <img src="./images/sponsors/amazon.png" alt="" />
+          <img src="./images/sponsors/figma.png" alt="" />
+          <img src="./images/sponsors/google.png" alt="" />
+          <img src="./images/sponsors/spotify.png" alt="" />
+          <img src="./images/sponsors/telerama.png" alt="" />
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
