--- a/index.html
+++ b/index.html
@@ -138,6 +138,12 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <section class="footer">
+        <small
+          >All rights reserved copyright@2023 startup landing page design</small
+        >
+      </section>
+    </footer>
   </body>
 </html>
